commit change test not final

--- a/views/admin/coupons.ejs
+++ b/views/admin/coupons.ejs
@@ -152,7 +152,7 @@
           
           <div id="error-discountType" class="text-red-600 text-xs mb-2"></div>
         </div>
-        <input type="number" id="discountValue" name="discountValue" placeholder="Discount Value" min="1" class="w-full mb-4 px-4 py-2 border rounded-md"  />
+        <input type="number" id="discountValue" name="discountValue" placeholder="Discount Value"  class="w-full mb-4 px-4 py-2 border rounded-md"  />
         <div id="error-discountValue" class="text-red-600 text-xs mb-2"></div>
         <input type="number" id="minOrderAmount" name="minOrderAmount" placeholder="Minimum Order Amount" min="0" class="w-full mb-4 px-4 py-2 border rounded-md"  />
         <div id="error-minOrderAmount" class="text-red-600 text-xs mb-2"></div>
