--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -249,7 +249,7 @@
 
     <div class="summary-total">
       <span>Total</span>
-      <span>₹ <%= subTotal %></span>
+      <span>₹ <%= total %></span>
     </div>
       
     <% const hasOutOfStock = cart.products.some(item => item.productId.stockQuantity === 0); %>
