--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -287,7 +287,7 @@
   </div>
   
             <!-- Recommendations -->
-            <div class="recommendations">
+            <!-- <div class="recommendations">
               <div class="order-summary-header">
                 <h2 class="text-lg font-semibold text-gray-900">
                   Recommended for You
@@ -319,7 +319,7 @@
                 </div>
                 <button class="add-to-cart-btn">Add</button>
               </div>
-            </div>
+            </div> -->
 <% } %>
 
            
@@ -330,6 +330,6 @@
     </main>
     <script src="/js/cart.js"></script>
 
-    <script src="public/js/cart.js"></script>
+
   </body>
 </html>
